// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`assertions.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import("./foo.json", { assert: { type: "json" } });

=====================================output=====================================
import("./foo.json", { assert: { type: "json" } });

================================================================================
`;

exports[`import-phase.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import.source(\`data:text/javascript,
    console.log("RUN");
\`)

import.source(String.raw\`data:text/javascript,
    console.log("RUN");
\`)

=====================================output=====================================
import.source(\`data:text/javascript,
    console.log("RUN");
\`);

import.source(String.raw\`data:text/javascript,
    console.log("RUN");
\`);

================================================================================
`;

exports[`import-phase.js format[acorn] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source(\`data:text/javascript,
    |        ^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-phase.js format[espree] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source(\`data:text/javascript,
    |        ^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-phase.js format[flow] 1`] = `
"Unexpected identifier, expected the identifier \`meta\` (1:8)
> 1 | import.source(\`data:text/javascript,
    |        ^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: Unexpected identifier, expected the identifier \`meta\` (1:7)"
`;

exports[`import-phase.js format[hermes] 1`] = `
"'meta' expected in member expression (1:8)
> 1 | import.source(\`data:text/javascript,
    |        ^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: 'meta' expected in member expression (1:7)
import.source(\`data:text/javascript,
       ^~~~~~
note: start of member expression (1:0)
import.source(\`data:text/javascript,
^"
`;

exports[`import-phase.js format[meriyah] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source(\`data:text/javascript,
    |        ^^^^^^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: [1:7-1:13]: The only valid meta property for import is 'import.meta'"
`;

exports[`import-phase.js format[typescript] 1`] = `
"'source' is not a valid meta-property for keyword 'import'. (1:1)
> 1 | import.source(\`data:text/javascript,
    | ^^^^^^^^^^^^^
  2 |     console.log("RUN");
  3 | \`)
  4 |
Cause: 'source' is not a valid meta-property for keyword 'import'."
`;

exports[`template-literal.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
module   =   await import(\`data:text/javascript,
    console.log("RUN");
\`);

module   =   await import(String.raw\`data:text/javascript,
    console.log("RUN");
\`);

=====================================output=====================================
module = await import(\`data:text/javascript,
    console.log("RUN");
\`);

module = await import(String.raw\`data:text/javascript,
    console.log("RUN");
\`);

================================================================================
`;

exports[`template-literal.js format[flow] 1`] = `
"Unexpected token \`import\`, expected the end of an expression statement (\`;\`) (1:20)
> 1 | module   =   await import(\`data:text/javascript,
    |                    ^
  2 |     console.log("RUN");
  3 | \`);
  4 |
Cause: Unexpected token \`import\`, expected the end of an expression statement (\`;\`) (1:19)"
`;

exports[`template-literal.js format[hermes] 1`] = `
"unexpected token after assignment expression (1:20)
> 1 | module   =   await import(\`data:text/javascript,
    |                    ^
  2 |     console.log("RUN");
  3 | \`);
  4 |
Cause: unexpected token after assignment expression (1:19)
module   =   await import(\`data:text/javascript,
                   ^"
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import("module.js");
import("module.js").then((a) => a);

=====================================output=====================================
import("module.js");
import("module.js").then((a) => a);

================================================================================
`;
